filled out some html in the 3 htmls

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
 	<h2>About Me</h2>
 
-		<img src="" height="200px" width="200px">
+		<img src="" height="175px" width="200px">
 
-		<p>Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. </p>
+		<p>Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. That's a little bit about me! </p>
 
+	<h3>Connect with me</h3>
+
+		<img src="" height="50px" width="50px">
+		<img src="" height="50px" width="50px">
+		<img src="" height="50px" width="50px">
 </body>
 </html>
