added css to the headings

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact me</title>
+	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<h1>Contact</h1>
-		<form>
-			Name: <br> <input type="text" name="Name" value=""><br>
-			Email: <br> <input type="text" name="Email" value=""><br>
-			Message: <br> <input type="text" name="Message" value=""><br>
-			<input type="submit" value="Submit">
-		</form>
+	<h1>Martin Perez</h1>
+	<h2>Portfolio</h2>
+		<h4>Place Holder</h4>
+		<img src="" height="175" width="225">
+		<h4>Place Holder</h4>
+		<img src="" height="175" width="225">
+		<h4>Place Holder</h4>
+		<img src="" height="175" width="225">
+		<h4>Place Holder</h4>
+		<img src="" height="175" width="225">
+		<h4>Place Holder</h4>
+		<img src="" height="175" width="225">
 
-	<h2>Conect with me</h2>
+	<h3>Connect with me</h3>
 
 		<img src="" height="50px" width="50px">
 		<img src="" height="50px" width="50px">
