--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title>Contact me</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<h1>Portfolio</h1>
-		<img src="" height="175px"px width="225">
-		<h3>Hangman</h3>
-		<img src="" height="175px"px width="225">
-		<h3>RPG Game</h3>
-		<img src="" height="175px"px width="225">
-		<h3>Trivia Game</h3>
-		<img src="" height="175px"px width="225">
-		<h3>Rutgers Info Widget</h3>
-		<img src="" height="175px"px width="225">
-		<h3>Rock Paper Scissors</h3>
-		<h2>Connect with me</h2>
-			<img src="" height="50px" width="50px">
-			<img src="" height="50px" width="50px">
-			<img src="" height="50px" width="50px">
+	<h1>Martin Perez</h1>
+	<h2>Contact</h2>
+		<form>
+			Name: <br> <input type="text" name="Name" value=""><br>
+			Email: <br> <input type="text" name="Email" value=""><br>
+			Message: <br> <input type="text" name="Message" value=""><br>
+			<input id="submit" type="submit" value="Submit">
+		</form>
+
+	<h3>Conect with me</h3>
+
+		<img src="" height="50px" width="50px">
+		<img src="" height="50px" width="50px">
+		<img src="" height="50px" width="50px">
 </body>
 </html>
