added css to the header

--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,35 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<div id="header">
+	<section id="name">
 	<h1>Martin Perez</h1>
+	</section>
+		<h5>About</h5>
+		<h5>Portfolio</h5>
+		<h5>Contact</h5>
+	</div>
+
+	<div>
 	<h2>Contact</h2>
 		<form>
-			Name: <br> <input type="text" name="Name" value=""><br>
+			Name: <br> <input type="text" name="Name" value="" ><br>
 			Email: <br> <input type="text" name="Email" value=""><br>
-			Message: <br> <input type="text" name="Message" value=""><br>
+			Message: <br> <input type="text" name="Message" value="" ><br>
 			<input id="submit" type="submit" value="Submit">
 		</form>
+	</div>
 
+	<div>
 	<h3>Conect with me</h3>
 
-		<img src="" height="50px" width="50px">
-		<img src="" height="50px" width="50px">
-		<img src="" height="50px" width="50px">
+		<img src="assets/images/githubpic.png" height="50px" width="50px">
+		<img src="assets/images/linkedinpic.png" height="50px" width="50px">
+		<img src="assets/images/stackofpic.png" height="50px" width="50px">
+	</div>
+
+	<div>
+		<h6>© Copyright 2017 Martin Perez</h6>
+	</div>
 </body>
 </html>
