--- a/index.html
+++ b/index.html
@@ -6,18 +6,39 @@
 
 </head>
 <body>
-	<h1>Martin Perez</h1>
+	<div id="header">
+		<section id="name">
+			<h1>Martin Perez</h1>
+		</section>
+		<section id="links">
+			<h5>About</h5>
+			<h5>Portfolio</h5>
+			<h5>Contact</h5>
+		</section>
+	</div>
+	
+	<div id="aboutme">
+		<section id="mainbody">
+			<h2>About Me</h2>
+		
+			<hr>
 
-	<h2>About Me</h2>
+			<p><img id="imgur" src="assets/images/biopic.jpg" height="150px" width="150px">Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. I also like to travel and hope to visit mulriple countries in the future. That's a little bit about me!</p>
+	</section>
+	</div>
 
-		<img src="" height="175px" width="200px">
+	<div id="connectwithme">
+	<section id="sidebar">
+			<h3>Connect with me</h3>
 
-		<p>Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. That's a little bit about me! </p>
-
-	<h3>Connect with me</h3>
-
-		<img src="" height="50px" width="50px">
-		<img src="" height="50px" width="50px">
-		<img src="" height="50px" width="50px">
+			<img src="assets/images/githubpic.png" height="50px" width="50px">
+			<img src="assets/images/linkedinpic.png" height="50px" width="50px">
+			<img src="assets/images/stackofpic.png" height="50px" width="50px">
+		</section>
+	</div>
+	
+	<div id="footer">
+		<h6>© Copyright 2017 Martin Perez</h6>
+	</div>
 </body>
 </html>
