--- a/portfolio.html
+++ b/portfolio.html
@@ -5,23 +5,39 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+	<div id="header">
+	<section id="name">
 	<h1>Martin Perez</h1>
+	</section>
+		<h5>About</h5>
+		<h5>Portfolio</h5>
+		<h5>Contact</h5>
+	</div>
+
+	<div>
 	<h2>Portfolio</h2>
 		<h4>Place Holder</h4>
-		<img src="" height="175" width="225">
+		<img src="http://lorempixel.com/output/abstract-q-c-200-200-1.jpg" height="175" width="225">
 		<h4>Place Holder</h4>
-		<img src="" height="175" width="225">
+		<img src="http://lorempixel.com/output/abstract-q-c-200-200-3.jpg" height="175" width="225">
 		<h4>Place Holder</h4>
-		<img src="" height="175" width="225">
+		<img src="http://lorempixel.com/output/abstract-q-c-200-200-4.jpg" height="175" width="225">
 		<h4>Place Holder</h4>
-		<img src="" height="175" width="225">
+		<img src="http://lorempixel.com/output/abstract-q-c-200-200-2.jpg" height="175" width="225">
 		<h4>Place Holder</h4>
-		<img src="" height="175" width="225">
+		<img src="http://lorempixel.com/output/abstract-q-c-200-200-5.jpg" height="175" width="225">
+	</div>
 
+	<div>
 	<h3>Connect with me</h3>
 
-		<img src="" height="50px" width="50px">
-		<img src="" height="50px" width="50px">
-		<img src="" height="50px" width="50px">
+		<img src="assets/images/githubpic.png" height="50px" width="50px">
+		<img src="assets/images/linkedinpic.png" height="50px" width="50px">
+		<img src="assets/images/stackofpic.png" height="50px" width="50px">
+	</div>
+
+	<div>
+		<h6>© Copyright 2017 Martin Perez</h6>
+	</div>
 </body>
 </html>
