--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
 <html>
 <head>
 	<title>Portfolio</title>
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
-	<div id="header">
-		<section id="name">
+	<div class="header">
+		<section class="name">
 			<h1>Martin Perez</h1>
 		</section>
-		<section id="links">
-			<h5>About</h5>
-			<h5>Portfolio</h5>
-			<h5>Contact</h5>
+		<section class="links">
+			<a href="../Basic-Portfolio/index.html">About</a>  |
+			<a href="../Basic-Portfolio/portfolio.html">Portfolio</a>  |
+			<a href="../Basic-Portfolio/contact.html">Contact</a>
 		</section>
 	</div>
 	
-	<div id="aboutme">
-		<section id="mainbody">
+	<div class="aboutme">
+		<section class="mainbody">
 			<h2>About Me</h2>
 		
 			<hr>
 
-			<p><img id="imgur" src="assets/images/biopic.jpg" height="150px" width="150px">Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. I also like to travel and hope to visit mulriple countries in the future. That's a little bit about me!</p>
+			<p><img class="imgur" src="assets/images/biopic.jpg" height="150px" width="150px">Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. I also like to travel and hope to visit mulriple countries in the future. That's a little bit about me!</p>
 	</section>
 	</div>
 
-	<div id="connectwithme">
-	<section id="sidebar">
+	<div class="connectwithme">
+		<section class="sidebar">
 			<h3>Connect with me</h3>
 
 			<img src="assets/images/githubpic.png" height="50px" width="50px">
@@ -37,8 +38,10 @@
 		</section>
 	</div>
 	
-	<div id="footer">
+	<div class="footer">
+		<footer>
 		<h6>© Copyright 2017 Martin Perez</h6>
+		</footer>
 	</div>
 </body>
 </html>
