--- a/contact.html
+++ b/contact.html
@@ -2,38 +2,43 @@
 <html>
 <head>
 	<title>Contact me</title>
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<div id="header">
-	<section id="name">
+	<div class="header">
+	<section class="name">
 	<h1>Martin Perez</h1>
 	</section>
-		<h5>About</h5>
-		<h5>Portfolio</h5>
-		<h5>Contact</h5>
+		<section class="links">
+			<a href="../Basic-Portfolio/index.html">About</a>  |
+			<a href="../Basic-Portfolio/portfolio.html">Portfolio</a>  |
+			<a href="../Basic-Portfolio/contact.html">Contact</a>
+		</section>
 	</div>
 
-	<div>
+	<div class="aboutme">
 	<h2>Contact</h2>
 		<form>
 			Name: <br> <input type="text" name="Name" value="" ><br>
 			Email: <br> <input type="text" name="Email" value=""><br>
-			Message: <br> <input type="text" name="Message" value="" ><br>
-			<input id="submit" type="submit" value="Submit">
+			Message: <br> <input class="message" type="text" name="Message" value="" ><br>
+			<input class="submit" type="submit" value="Submit"; >
 		</form>
 	</div>
 
-	<div>
-	<h3>Conect with me</h3>
+	<div class="connectwithme">
+		<section class="sidebar">
+			<h3>Connect with me</h3>
 
-		<img src="assets/images/githubpic.png" height="50px" width="50px">
-		<img src="assets/images/linkedinpic.png" height="50px" width="50px">
-		<img src="assets/images/stackofpic.png" height="50px" width="50px">
+			<img src="assets/images/githubpic.png" height="50px" width="50px">
+			<img src="assets/images/linkedinpic.png" height="50px" width="50px">
+			<img src="assets/images/stackofpic.png" height="50px" width="50px">
+		</section>
 	</div>
-
-	<div>
+		<div class="footer">
 		<h6>© Copyright 2017 Martin Perez</h6>
 	</div>
+
 </body>
 </html>
