--- a/portfolio.html
+++ b/portfolio.html
@@ -2,30 +2,43 @@
 <html>
 <head>
 	<title>Portfolio</title>
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	<div id="header">
-	<section id="name">
+	<div class="header">
+	<section class="name">
 	<h1>Martin Perez</h1>
 	</section>
-		<h5>About</h5>
-		<h5>Portfolio</h5>
-		<h5>Contact</h5>
+		<section class="links">
+			<a href="../Basic-Portfolio/index.html">About</a>  |
+			<a href="../Basic-Portfolio/portfolio.html">Portfolio</a>  |
+			<a href="../Basic-Portfolio/contact.html">Contact</a>
+		</section>
 	</div>
 
-	<div>
+	<div class="aboutme">
 	<h2>Portfolio</h2>
-		<h4>Place Holder</h4>
-		<img src="http://lorempixel.com/output/abstract-q-c-200-200-1.jpg" height="175" width="225">
-		<h4>Place Holder</h4>
-		<img src="http://lorempixel.com/output/abstract-q-c-200-200-3.jpg" height="175" width="225">
-		<h4>Place Holder</h4>
-		<img src="http://lorempixel.com/output/abstract-q-c-200-200-4.jpg" height="175" width="225">
-		<h4>Place Holder</h4>
-		<img src="http://lorempixel.com/output/abstract-q-c-200-200-2.jpg" height="175" width="225">
-		<h4>Place Holder</h4>
-		<img src="http://lorempixel.com/output/abstract-q-c-200-200-5.jpg" height="175" width="225">
+		<div>
+			<h4>Place Holder</h4>
+			<img src="http://lorempixel.com/output/abstract-q-c-200-200-1.jpg" height="175" width="225">
+		</div>
+		<div>
+			<h4>Place Holder</h4>
+			<img src="http://lorempixel.com/output/abstract-q-c-200-200-3.jpg" height="175" width="225">
+		</div>
+		<div>
+			<h4>Place Holder</h4>
+			<img src="http://lorempixel.com/output/abstract-q-c-200-200-4.jpg" height="175" width="225">
+		</div>
+		<div>
+			<h4>Place Holder</h4>
+			<img src="http://lorempixel.com/output/abstract-q-c-200-200-2.jpg" height="175" width="225">
+		</div>
+		<div>
+			<h4>Place Holder</h4>
+			<img src="http://lorempixel.com/output/abstract-q-c-200-200-5.jpg" height="175" width="225">
+		</div>
 	</div>
 
 	<div>
@@ -36,8 +49,10 @@
 		<img src="assets/images/stackofpic.png" height="50px" width="50px">
 	</div>
 
-	<div>
+	<div class="footer">
+		<footer>
 		<h6>© Copyright 2017 Martin Perez</h6>
+		</footer>
 	</div>
 </body>
 </html>
