Added connect with me box

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,14 @@
 		</div>
 	</div>
 
-	<div>
-	<h3>Connect with me</h3>
+	<div class="connectwithme">
+		<section class="sidebar">
+			<h3>Connect with me</h3>
 
-		<img src="assets/images/githubpic.png" height="50px" width="50px">
-		<img src="assets/images/linkedinpic.png" height="50px" width="50px">
-		<img src="assets/images/stackofpic.png" height="50px" width="50px">
+			<img src="assets/images/githubpic.png" height="50px" width="50px">
+			<img src="assets/images/linkedinpic.png" height="50px" width="50px">
+			<img src="assets/images/stackofpic.png" height="50px" width="50px">
+		</section>
 	</div>
 
 	<div class="footer">
