--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+	
 	<div class="header">
 		<section class="name">
 			<h1>Martin Perez</h1>
@@ -38,10 +39,9 @@
 		</section>
 	</div>
 	
-	<div class="footer">
-		<footer>
+		<footer class="footer">
 		<h6>© Copyright 2017 Martin Perez</h6>
 		</footer>
-	</div>
+
 </body>
 </html>
