--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		
 			<hr>
 
-			<p><img class="imgur" src="assets/images/biopic.jpg" height="150px" width="150px">Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. I also like to travel and hope to visit mulriple countries in the future. That's a little bit about me!</p>
+			<p><img class="imgur" src="assets/images/Biopic.jpg" height="150px" width="150px">Hey! My name is Martin Perez. I am 20 years old and will turn 21 on July 27, 2017. I was born and raised here in Utah by my parents who are both from Mexico. I am currently a student at the University of Utah Coding Bootcamp. My hobbies are playing video games, reading manga and watching anime. I am also a huge Utah Jazz fan. My favorite foods have to be Italian and japanese food. I also like to travel and hope to visit mulriple countries in the future. That's a little bit about me!</p>
 	</section>
 	</div>
 
